RESOLVED FIXED128137
Fix the cloop due to GenGC
https://bugs.webkit.org/show_bug.cgi?id=128137
Summary Fix the cloop due to GenGC
Mark Hahnenberg
Reported 2014-02-03 16:15:49 PST
The cloop was missing a couple of features that GenGC depended on, which broke the c loop build.
Attachments
Patch (8.16 KB, patch)
2014-02-03 16:17 PST, Mark Hahnenberg
ggaren: review+
Mark Hahnenberg
Comment 1 2014-02-03 16:17:45 PST
Geoffrey Garen
Comment 2 2014-02-03 16:20:38 PST
Comment on attachment 223037 [details] Patch r=me
Mark Hahnenberg
Comment 3 2014-02-03 16:49:36 PST
Note You need to log in before you can comment on or make changes to this bug.