Fix the cloop due to GenGC https://bugs.webkit.org/show_bug.cgi?id=128137

Reviewed by Geoffrey Garen.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::llint_write_barrier_slow):
* llint/LLIntSlowPaths.h:
* llint/LowLevelInterpreter.cpp:
(JSC::CLoopRegister::operator JSCell*):
* llint/LowLevelInterpreter32_64.asm:
* llint/LowLevelInterpreter64.asm:
* offlineasm/cloop.rb:
* offlineasm/instructions.rb:


Canonical link: https://commits.webkit.org/146154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163345 268f45cc-cd09-0410-ab3c-d52691b4dbfc